Bug 1401538 - Drop mTimerScheduledAt at RequestContext::CancelTailedRequest when tail queue is empty. r=kershaw